--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt build && purgecss --css assets/css/bootstrap.min.css --content pages/**/*.vue /**/*.vue  --output static/assets/css/",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint": "npm run lint:js && npm run lint:style"
+    "lint": "npm run lint:js && npm run lint:style",
+    "purge": "purgecss --css assets/css/bootstrap.min.css --content pages/**/*.vue /**/*.vue  --output static/assets/css/"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
@@ -24,11 +25,12 @@
   "dependencies": {
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.2",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "nuxt-responsive-loader": "^2.0.1"
+    "nuxt-responsive-loader": "^2.0.1",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -45,7 +47,9 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
+    "nuxt-purgecss": "^1.0.0",
     "prettier": "^2.1.2",
+    "purgecss": "^3.0.0",
     "sass-loader": "^10.0.3",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
