--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build && purgecss --css assets/css/bootstrap.min.css --content pages/**/*.vue /**/*.vue  --output static/assets/css/",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.vuue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
     "purge": "purgecss --css assets/css/bootstrap.min.css --content pages/**/*.vue /**/*.vue  --output static/assets/css/"
@@ -25,8 +25,8 @@
   "dependencies": {
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.2",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.17.3",
+    "@nuxtjs/pwa": "^3.2.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "nuxt-responsive-loader": "^2.0.1",
